code/tui/snapshots/shared/models/picker/denied_acceleration_can_be_cleared.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────╮"
"│ Search models                        │"
"╰──────────────────────────────────────╯"
"> GPT-6 Astra  [Unavailable]            "
"                                        "
