code/tui/snapshots/shared/models/picker/model_controls_40_English.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────╮"
"│ Search models                        │"
"╰──────────────────────────────────────╯"
"> GPT-6 Astra  [Fast off]  [272k]       "
"  GPT-4o                                "
"                                        "
"                                        "
"                                        "
"                                        "
