code/tui/snapshots/shared/models/picker/model_tab_focus_chinese.snap
---
source: code/tui/src/models/picker_tests.rs
expression: "frames.join(\"\\n\")"
---
80 columns · effort
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra    ← ██ ██ ██ → Medium  [加速 关]  [272k]                         " Hidden by multi-width symbols: [(40, " "), (42, " "), (45, " ")]
"                                                                                "
"                                                                                "
"                                                                                "

80 columns · acceleration
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra      ██ ██ ██   Medium  [加速 关]  [272k]                         " Hidden by multi-width symbols: [(40, " "), (42, " "), (45, " ")]
"                                                                                "
"                                                                                "
"                                                                                "

80 columns · context
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra      ██ ██ ██   Medium  [加速 关]  [272k]                         " Hidden by multi-width symbols: [(40, " "), (42, " "), (45, " ")]
"                                                                                "
"                                                                                "
"                                                                                "

40 columns · effort
"╭──────────────────────────────────────╮"
"│ 搜索模型                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────╯"
"> GPT-6 Astra    ← ██ ██ ██ → Medium    "
"                                        "
"                                        "
"                                        "

40 columns · acceleration
"╭──────────────────────────────────────╮"
"│ 搜索模型                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────╯"
"> GPT-6 Astra  [加速 关]  [272k]        " Hidden by multi-width symbols: [(17, " "), (19, " "), (22, " ")]
"                                        "
"                                        "
"                                        "

40 columns · context
"╭──────────────────────────────────────╮"
"│ 搜索模型                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────╯"
"> GPT-6 Astra  [加速 关]  [272k]        " Hidden by multi-width symbols: [(17, " "), (19, " "), (22, " ")]
"                                        "
"                                        "
"                                        "
