code/tui/snapshots/shared/models/picker/other_provider_model_controls_chinese.snap
---
source: code/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> Claude Opus 5.5   [加速 关]  [1m]                                                                 " Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " ")]
"  Gemini 3.8 Flash  [加速 开]  [1m]                                                                 " Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " ")]
"  Grok 4.7          [加速 关]                                                                       " Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " ")]
"  Kimi K3                      [272k]                                                               "
"  DeepSeek V4 Pro              [1m]                                                                 "
"  GLM-5.3                      [1m]                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
